Updated Metadata + Added Header

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="icon" href="https://github.com/favicon.ico" />
     
     <!-- Change the title to the name of your story -->
-    <title>Your Title Here</title>
+    <title>The Blue Blanket</title>
     <meta
       name="description"
-      content="Description of SFW copypasta"
+      content="Description of The Blue Blanket Story"
     />
     
     <meta name="robots" content="index,follow" />
-    <meta property="og:title" content="Your Title" />
+    <meta property="og:title" content="The Blue Blanket" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://github.com/" />
     <meta name="twitter:card" content="summary" />
@@ -30,6 +30,8 @@
       </nav>
     </header>
     <main>
+      <h1>The Blue Blanket</h1>
+      <img src="" alt="Blue blanket laid on a chair">
     </main>  
   </body>
 </html>
