Added Img, Story, Jump, + Footer
footer has link to wiki

--- a/index.html
+++ b/index.html
@@ -31,7 +31,109 @@
     </header>
     <main>
       <h1>The Blue Blanket</h1>
-      <img src="" alt="Blue blanket laid on a chair">
+      <img src="assets/blue_blanket_background.webp" alt="Blue blanket laid on a chair">
+
+      <section class="story">
+        <p>
+          Back when I was a kid, I used to live in a REALLY crappy apartment. When I say 
+          crappy, I mean it. There would be mice crawling everywhere, we had a bug problem, 
+          and not to mention the leaking from the sink. Sometimes the toilets wouldn't even 
+          flush. Living there was probably the worst three years of my life. Anyways, 
+          during the first year I moved there, my mom and dad used to argue a lot about money. 
+          My dad would sometimes buy cigarettes behind my mom's back and they would argue and 
+          argue and argue. It wasn't the best thing to hear as a kid, but one day my dad came 
+          home with a blue blanket. At the time, I was six and I slept with it almost every 
+          night. One day, my dad was driving the family to New York City for our family vacation, 
+          but even there, we couldn't afford a good place to stay. 
+        </p>
+        <p>
+          Fortunately, one of my dad's old friends lived in New York City so we stayed at his 
+          house. I would hear my dad show his gratitude a lot. I brought my blanket with me of 
+          course. Since my dad's friend didn't have enough rooms, I slept on the sofa, my dad 
+          slept on an old mattress on the floor, and my mom slept next to me on the sofa. I would 
+          cuddle in my blue blanket every night. Overall, the vacation wasn't that bad since my 
+          dad brought me to this amusement park, "Coney Island." I had a hell of a good time there, 
+          but on that day something happened. I was sitting on a bench eating some ice cream when 
+          my blanket got carried away by the wind. When I found out, I was crying and everyone was 
+          looking at me. Eventually, I got over it since my mom promised to buy me another one. 
+          When we got home, I was completely shocked. I think you can all guess what happened next. 
+        </p>
+        <p>
+          In most horror stories, the blanket would probably appear back in the house, but in this 
+          case, it was totally different. My mom and dad were completely surprised, but since I was 
+          only six at the time, I didn't see anything wrong. The blanket was in our mailbox with a 
+          note attached to it saying "You left your blanket." I just thought someone was really nice 
+          and found my blanket for me. I was actually quite happy. I continued on sleeping with it 
+          almost every single night and followed my daily routine. Since I was six, I went to school 
+          like an average kid would go at the age of six. 
+        </p>
+        <p>
+          One day, the teacher announced that we were going to have a show and tell. The teacher 
+          encouraged every kid to bring in something. I brought in my blanket of course. At that 
+          time, I had a friend named Jason. Jason was Chinese I believe. We started hanging out on 
+          the first couple days of school since we were both Chinese. My friend Jason brought in an 
+          action figure of a power ranger. It could transform into two forms, and at that time, it 
+          was pretty damn amazing. I kinda became obsessed with it so much that I offered to let him 
+          borrow my blanket in exchange for his power ranger action figure. When I was six, I was a 
+          surprisingly good negotiator, as I still am now. When I went home that day, we received a 
+          UPS package that day. Me and my parents were confused since we didn't buy anything and it 
+          had my name on it. We opened it together and there it was. 
+        </p>
+        <div class="jump">
+          <img src="https://pngimg.com/d/blanket_PNG8.png" alt="Rolled up blue blanket">
+        </div>
+        <p>
+          A blue blanket, in the box. Attatched to it was a note, "You should really stop losing your 
+          blanket." I was a bit confused and told my parents the situation. I still kinda feel bad for 
+          doing this, but the next day in school, he told me that he lost my blanket and in return, he 
+          let me keep his action figure. I could've just told him that I had it but I really liked that 
+          toy. That day when I went to sleep, I felt really weird, as if someone was talking to me. I 
+          heard whispers of someone saying, "Are you happy? You got a free toy!" And at that time, I 
+          wasn't really afraid of ghosts or the dark. Funny thing is that I actually got scared of the 
+          dark at age 11, but back to the story. I started to trade my blanket for things since I kind 
+          of figured out no matter who I gave it to, it would just return to me either way. I still feel 
+          guilty to this day. 
+        </p>
+        <p>
+          In middle school, Jason and I were still friends. We hung out together all the time. School was 
+          just like normal, but since I had Asian parents, I had high expectations. One day, I got suspended 
+          for getting into a fist fight. I ended up with a black eye from the fight, and an ass whooping from 
+          my parents. Ever since then, I would talk to my blanket and tell him about my personal feelings, 
+          but I didn't hear any whisper. Instead, I kept dreaming of a blanket replying to me, and the blanket 
+          in my dreams was the exact blanket I slept with. 
+        </p>
+        <p>
+          When time went by, I was in high school and before I knew it, I didn't even use my blanket 
+          anymore. I had a job at the time and I purchased this really soft and furry blanket. The fur was 
+          so soft and felt so good. As I slept in it every night, I wouldn't have any more dreams besides 
+          my love fantasies, but that's another story. One day, my friend Jason died in a horrible car accident. 
+          I believe his car's brakes broke and he ran into the ocean. Someone told me that while he tried to 
+          open the doors, there was a blue cloth tied around his neck to the seat. When I heard this, I became 
+          very scared. 
+        </p>
+        <p>
+          That day when I got home, I received a letter from anonymous. The exact words still sit in my head, 
+          "Why don't you sleep with me anymore?" At first, I thought it was a joke, since that sounded a bit sexual 
+          to me, but then, I would see my loved ones getting hurt. June 26th, 2004, something changed my life 
+          forever. My father was apparently strangled to death. They say there was a blue cloth tied around his neck. 
+          Police say that they couldn't find the person that killed him, but I knew what did it. I actually looked 
+          at the calendar and found out it was exactly 666 days from the incident where my friend Jason died. I was 
+          really scared so I took the blanket and burnt it. The thing that really makes my heart jump is that my mother 
+          died in her work building from a fire. I couldn't make up my mind so I'm deciding to commit suicide right 
+          now. If you read this, the date should be April 30th, 2010, exactly 666 days from when my father passed away. 
+          Just two hours ago, I received the news of my mother's death. Farewell, hopefully I won't be haunted in 
+          the afterlife. 
+        </p>
+        <p>
+          - Jack
+        </p>
+      </section>
+
+      <footer>
+        <p>
+          Original Source: <a href="https://creepypasta.fandom.com/wiki/The_Blue_Blanket" target="_blank">From Jack Himself</a>
+        </p>
+      </footer>
     </main>  
   </body>
 </html>
