Added w/h to imgs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <h1>The Blue Blanket</h1>
-      <img src="assets/blue_blanket_background.webp" alt="Blue blanket laid on a chair">
+      <img src="assets/blue_blanket_background.webp" alt="Blue blanket laid on a chair" width="420" height="600">
 
       <section class="story">
         <p>
@@ -80,7 +80,7 @@
           had my name on it. We opened it together and there it was. 
         </p>
         <div class="jump">
-          <img src="https://pngimg.com/d/blanket_PNG8.png" alt="Rolled up blue blanket">
+          <img src="https://pngimg.com/d/blanket_PNG8.png" alt="Rolled up blue blanket" width="250" height="260">
         </div>
         <p>
           A blue blanket, in the box. Attatched to it was a note, "You should really stop losing your 
