--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
   <body>
     <header>
       <nav>
-        <a href="index.html">SpookySpaghetti</a>
+        <a class="brand" href="index.html">SpookySpaghetti</a>
         <a href="#">Popular</a>
         <a href="#">New</a>
         <a href="#">Submit</a>
       </nav>
     </header>
+    
     <main>
       <h1>The Blue Blanket</h1>
-      <img src="assets/blue_blanket_background.webp" alt="Blue blanket laid on a chair" width="420" height="600">
+      <img class="hero" src="assets/blue_blanket_background.webp" alt="Blue blanket laid on a chair" width="420" height="600">
 
       <section class="story">
         <p>
@@ -80,7 +81,7 @@
           had my name on it. We opened it together and there it was. 
         </p>
         <div class="jump">
-          <img src="https://pngimg.com/d/blanket_PNG8.png" alt="Rolled up blue blanket" width="250" height="260">
+          <img class="sticky" src="https://pngimg.com/d/blanket_PNG8.png" alt="Rolled up blue blanket" width="250" height="260">
         </div>
         <p>
           A blue blanket, in the box. Attatched to it was a note, "You should really stop losing your 
@@ -124,7 +125,7 @@
           Just two hours ago, I received the news of my mother's death. Farewell, hopefully I won't be haunted in 
           the afterlife. 
         </p>
-        <p>
+        <p class="jack">
           - Jack
         </p>
       </section>
